fixing nav bar on mobile query

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -44,13 +44,6 @@
         border-radius: 5px;
       
     }
-    .nav__list__item:hover{
-        background-color: #c45252;
-        color: #ffffff;
-        padding: 10px;
-    }
-
-
   }
   
 @media (min-width: 768px) and (max-width: 1023px) {
